@@ -1,3 +1,4 @@
+ * Do not write empty width or height attributes in opendocument
  * Update py:attrs attributes in opendocument
 
 0.5.3 - 20100110
